// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Content Test isOpen 1`] = `
<Backdrop
  className=""
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
    tag="div"
  >
    <ModalBox
      className=""
      id="id"
      isLarge={false}
      isSmall={false}
      style={
        Object {
          "width": null,
        }
      }
      title="Test Modal Content title"
    >
      <ModalBoxCloseButton
        className=""
        onClose={[Function]}
      />
      <ModalBoxHeader
        className=""
        hideTitle={false}
      >
         
        Test Modal Content title
         
      </ModalBoxHeader>
      <ModalBoxBody
        className=""
        id="id"
      >
        This is a ModalBox header
      </ModalBoxBody>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content Test only body 1`] = `
<Backdrop
  className=""
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
    tag="div"
  >
    <ModalBox
      className=""
      id="id"
      isLarge={false}
      isSmall={false}
      style={
        Object {
          "width": null,
        }
      }
      title="Test Modal Content title"
    >
      <ModalBoxCloseButton
        className=""
        onClose={[Function]}
      />
      <ModalBoxHeader
        className=""
        hideTitle={false}
      >
         
        Test Modal Content title
         
      </ModalBoxHeader>
      <ModalBoxBody
        className=""
        id="id"
      >
        This is a ModalBox header
      </ModalBoxBody>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content Test with footer 1`] = `
<Backdrop
  className=""
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
    tag="div"
  >
    <ModalBox
      className=""
      id="id"
      isLarge={false}
      isSmall={false}
      style={
        Object {
          "width": null,
        }
      }
      title="Test Modal Content title"
    >
      <ModalBoxCloseButton
        className=""
        onClose={[Function]}
      />
      <ModalBoxHeader
        className=""
        hideTitle={false}
      >
         
        Test Modal Content title
         
      </ModalBoxHeader>
      <ModalBoxBody
        className=""
        id="id"
      >
        This is a ModalBox header
      </ModalBoxBody>
      <ModalBoxFooter
        className=""
      >
         
        Testing
         
      </ModalBoxFooter>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content Test with header 1`] = `
<Backdrop
  className=""
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
    tag="div"
  >
    <ModalBox
      className=""
      id="id"
      isLarge={false}
      isSmall={false}
      style={
        Object {
          "width": null,
        }
      }
      title="Test Modal Content title"
    >
      <ModalBoxCloseButton
        className=""
        onClose={[Function]}
      />
      <ModalBoxHeader
        className=""
        hideTitle={false}
      >
         
        Test Modal Content title
         
      </ModalBoxHeader>
      <ModalBoxBody
        className=""
        header="Testing"
        id="id"
      >
        This is a ModalBox header
      </ModalBoxBody>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content Test with header and footer 1`] = `
<Backdrop
  className=""
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
    tag="div"
  >
    <ModalBox
      className=""
      id="id"
      isLarge={false}
      isSmall={false}
      style={
        Object {
          "width": null,
        }
      }
      title="Test Modal Content title"
    >
      <ModalBoxCloseButton
        className=""
        onClose={[Function]}
      />
      <ModalBoxHeader
        className=""
        hideTitle={false}
      >
         
        Test Modal Content title
         
      </ModalBoxHeader>
      <ModalBoxBody
        className=""
        header="Testing header"
        id="id"
      >
        This is a ModalBox header
      </ModalBoxBody>
      <ModalBoxFooter
        className=""
      >
         
        Testing footer
         
      </ModalBoxFooter>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content Test with onclose 1`] = `
<Backdrop
  className=""
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
    tag="div"
  >
    <ModalBox
      className=""
      id="id"
      isLarge={true}
      isSmall={false}
      style={
        Object {
          "width": null,
        }
      }
      title="Test Modal Content title"
    >
      <ModalBoxCloseButton
        className=""
        onClose={[Function]}
      />
      <ModalBoxHeader
        className=""
        hideTitle={false}
      >
         
        Test Modal Content title
         
      </ModalBoxHeader>
      <ModalBoxBody
        className=""
        header="Testing header"
        id="id"
        onclose={[Function]}
      >
        This is a ModalBox header
      </ModalBoxBody>
      <ModalBoxFooter
        className=""
      >
         
        Testing footer
         
      </ModalBoxFooter>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;

exports[`Modal Content test without footer 1`] = `
<Backdrop
  className=""
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    className="pf-l-bullseye"
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
      }
    }
    paused={false}
    tag="div"
  >
    <ModalBox
      className=""
      id="id"
      isLarge={false}
      isSmall={false}
      style={
        Object {
          "width": null,
        }
      }
      title="Test Modal Content title"
    >
      <ModalBoxCloseButton
        className=""
        onClose={[Function]}
      />
      <ModalBoxHeader
        className=""
        hideTitle={false}
      >
         
        Test Modal Content title
         
      </ModalBoxHeader>
      <ModalBoxBody
        className=""
        id="id"
      >
        This is a ModalBox header
      </ModalBoxBody>
    </ModalBox>
  </FocusTrap>
</Backdrop>
`;
